[project]
name = "llm-proxy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx>=0.28.1",
    "ruff>=0.11.10",
    "uvicorn>=0.34.2",
]

[dependency-groups]
lint = [
    "ruff>=0.11.10",
]
